--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -88,7 +88,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
-        android:id="@+id/btnNext"
+        android:id="@+id/btnBook"
         android:layout_width="73dp"
         android:layout_height="64dp"
         android:layout_marginEnd="16dp"
