--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,6 +20,9 @@
         <action
             android:id="@+id/action_loginFragment_to_signupFragment"
             app:destination="@id/signupFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_adminFragment"
+            app:destination="@id/adminFragment" />
     </fragment>
 
     <fragment
@@ -288,6 +291,9 @@
         <action
             android:id="@+id/action_splashFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_adminFragment"
+            app:destination="@id/adminFragment" />
     </fragment>
 
     <fragment
@@ -301,5 +307,50 @@
         android:name="com.example.xtrememoto.ui.service.TestRideFragment"
         android:label="fragment_test_ride"
         tools:layout="@layout/fragment_test_ride" />
+    <fragment
+        android:id="@+id/adminFragment"
+        android:name="com.example.xtrememoto.ui.admin.AdminFragment"
+        android:label="AdminFragment" >
+        <action
+            android:id="@+id/action_adminFragment_to_adminOffersFragment"
+            app:destination="@id/adminOffersFragment" />
+        <action
+            android:id="@+id/action_adminFragment_to_partsFragment2"
+            app:destination="@id/partsFragment2" />
+        <action
+            android:id="@+id/action_adminFragment_to_adminBikesFragment"
+            app:destination="@id/adminBikesFragment" />
+        <action
+            android:id="@+id/action_adminFragment_to_adminPartsFragment"
+            app:destination="@id/adminPartsFragment" />
+        <action
+            android:id="@+id/action_adminFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminBikesFragment"
+        android:name="com.example.xtrememoto.ui.admin.AdminBikesFragment"
+        android:label="AdminBikesFragment" />
+    <fragment
+        android:id="@+id/adminOffersFragment"
+        android:name="com.example.xtrememoto.ui.admin.AdminOffersFragment"
+        android:label="AdminOffersFragment" />
+    <fragment
+        android:id="@+id/adminPartsFragment"
+        android:name="com.example.xtrememoto.ui.admin.AdminPartsFragment"
+        android:label="AdminPartsFragment" />
+    <fragment
+        android:id="@+id/partsFragment2"
+        android:name="com.example.xtrememoto.ui.other.PartsFragment"
+        android:label="PartsFragment" />
+    <fragment
+        android:id="@+id/contactFragment"
+        android:name="com.example.xtrememoto.util.ContactFragment"
+        android:label="fragment_contact"
+        tools:layout="@layout/fragment_contact" >
+        <action
+            android:id="@+id/action_contactFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 
 </navigation>
