--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -326,6 +326,9 @@
         <action
             android:id="@+id/action_adminFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_adminFragment_to_adminBookingFragment"
+            app:destination="@id/adminBookingFragment" />
     </fragment>
     <fragment
         android:id="@+id/adminBikesFragment"
@@ -352,5 +355,9 @@
             android:id="@+id/action_contactFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/adminBookingFragment"
+        android:name="com.example.xtrememoto.ui.admin.AdminBookingFragment"
+        android:label="AdminBookingFragment" />
 
 </navigation>
