--- a/app/src/main/res/layout/fragment_documents.xml
+++ b/app/src/main/res/layout/fragment_documents.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/bg_app"
     tools:context=".ui.bike.DocumentsFragment">
 
     <ImageButton
@@ -15,6 +15,7 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="16dp"
         android:src="@drawable/ic_arrow_back"
+        app:tint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bike Documents"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/btnBack"
@@ -47,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No bike documents found"
+        android:textColor="@color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/llButtonContainer"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,8 +83,9 @@
             android:layout_marginStart="8dp"
             android:text="Delete"
             android:textAllCaps="false"
-            android:textColor="@android:color/holo_red_dark"
-            app:strokeColor="@android:color/holo_red_dark" />
+            android:textColor="@android:color/holo_red_light"
+            app:strokeColor="@android:color/holo_red_light"
+            android:backgroundTint="#80000000"/>
 
     </LinearLayout>
 
