--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
+    android:background="@drawable/bg_app"
     tools:context=".ui.profile.ProfileFragment">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginTop="50dp"
         android:text="Profile"
         android:textAlignment="center"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        app:cardBackgroundColor="#CCFFFFFF"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
         app:layout_constraintTop_toBottomOf="@id/tvProfileTitle">
@@ -73,6 +74,7 @@
             android:id="@+id/cvProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="#CCFFFFFF"
             app:cardCornerRadius="12dp"
             app:cardElevation="2dp"
             android:layout_marginBottom="8dp">
@@ -109,6 +111,7 @@
             android:id="@+id/cvMyBikes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="#CCFFFFFF"
             app:cardCornerRadius="12dp"
             app:cardElevation="2dp"
             android:layout_marginBottom="8dp">
@@ -145,6 +148,7 @@
             android:id="@+id/cvBikeDocuments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="#CCFFFFFF"
             app:cardCornerRadius="12dp"
             app:cardElevation="2dp"
             android:layout_marginBottom="8dp">
@@ -181,6 +185,7 @@
             android:id="@+id/cvPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="#CCFFFFFF"
             app:cardCornerRadius="12dp"
             app:cardElevation="2dp"
             android:layout_marginBottom="8dp">
@@ -217,6 +222,7 @@
             android:id="@+id/cvContactUs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="#CCFFFFFF"
             app:cardCornerRadius="12dp"
             app:cardElevation="2dp"
             android:layout_marginBottom="8dp">
@@ -257,7 +263,7 @@
         android:text="Log Out"
         android:drawableStart="@drawable/ic_logout"
         android:drawablePadding="8dp"
-        android:backgroundTint="@color/suzuki_blue"
+        android:backgroundTint="@color/red"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/llProfileOptions"
         app:layout_constraintStart_toStartOf="parent"
