--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@id/homeFragment"
         android:icon="@drawable/ic_home"
+        android:iconTint="#172880"
         android:title="Home" />
     <item
         android:id="@id/profileFragment"
