--- a/app/src/main/res/layout/fragment_service_schedule.xml
+++ b/app/src/main/res/layout/fragment_service_schedule.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F7FA">
+    android:background="@drawable/bg_app">
 
     <View
         android:id="@+id/headerBg"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:background="@color/suzuki_blue"
+        android:background="#80000000"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
